// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert arr 1`] = `
[
  {
    "A1": 1,
    "B1": {
      "B1": 1,
      "b2": {
        "B1": [
          {
            "B1": 1,
            "b2": {},
            "b3": "1",
          },
        ],
      },
      "b3": "1",
    },
    "c": null,
    "d": "",
  },
]
`;

exports[`convert array of base type 1`] = `
{
  "A1": {
    "B1": 1,
    "F1": [
      {
        "A1": 1,
      },
    ],
    "c": [
      1,
      2,
      3,
    ],
    "d": [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`convert obj 1`] = `
{
  "A1": 1,
  "B1": {
    "B1": 1,
    "b2": {
      "B1": [
        {
          "B1": 1,
          "F1": {},
          "b2": {},
          "b3": "1",
        },
      ],
    },
    "b3": "1",
  },
  "c": null,
  "d": "",
}
`;

exports[`convert obj2 1`] = `
{
  "A1": 1,
  "B1": {
    "B1": 1,
    "b2": {
      "B1": [
        {
          "B1": 1,
          "F1": {},
          "b2": {},
          "b3": "1",
        },
      ],
    },
    "b3": "1",
    "b4": {
      "b1": 1,
      "b2": {},
      "b3": "1",
    },
  },
  "c": null,
  "d": "",
}
`;
